[package]
name = "rutie_gvl_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "rutie_gvl_example"
crate-type = ["dylib"]

[profile.release]
debug = true
opt-level = 0
rpath = true
debug-assertions = true

[dependencies]
crossbeam-channel = "0.5.6"
ctrlc = "3.2.4"
notify = "5.0.0"
rutie = {version="0.8.4", features=["no-link"]}
